Scraped some gradient colors.

--- a/source/views/Styles.view.less
+++ b/source/views/Styles.view.less
@@ -8,6 +8,11 @@
 @yellow: #DEB74A;
 @red: #A52F22;
 
+@horizontal-gradient: linear-gradient(90deg,#3d2fae,#b769d1);
+@vertical-gradient: linear-gradient(#3d2fae,#b769d1);
+@border-gradient: 8px solid #3d2fae;
+@null-gradient: #392e5c;
+
 /////////////////
 // Dimensions //
 ///////////////
