Added basic data grokking.

--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -33,6 +33,8 @@
     background-color: @white;
 
     &.drag {
-        background-color: orange !important;
+        border-width: 8px;
+        border-style: dashed;
+        border-color: @border-color;
     }
 }
