Styled the extension insights component.

--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -6,8 +6,8 @@
 
 @font-face {
     font-weight: 400;
-    font-family: "comfortaa";
-    src: url("../fonts/comfortaa.ttf") format("truetype");
+    font-family: "open-sans";
+    src: url("../fonts/open-sans.ttf") format("truetype");
 }
 
 ///////////////
@@ -22,14 +22,13 @@
 }
 
 #mount {
-    padding: 1em;
     width: 100%;
     height: 100%;
     position: fixed;
 
     color: @black;
     text-align: center;
-    font-family: comfortaa;
+    font-family: open-sans;
     background-color: @white;
 
     &.drag {
