--- a/source/views/ExtensionInsight.view.less
+++ b/source/views/ExtensionInsight.view.less
@@ -11,8 +11,14 @@
         .Context {
             font-size: 1.25em;
         }
+
         .Name {
             font-size: 3em;
+            line-height: 1.5em;
+        }
+
+        .Date {
+            font-size: 1.25em;
         }
     }
 
@@ -28,9 +34,12 @@
             }
 
             .Events {
+                display: flex;
+                justify-content: center;
+
                 .Event {
+                    // flex: 1;
                     width: 5em;
-                    display: inline-block;
 
                     &:not(:first-child) {
                         margin-left: 1em;
@@ -47,11 +56,14 @@
                             min-height: 0.1em;
                             position: absolute;
                             background-color: green;
+                            border-radius: @roundness;
                         }
                     }
 
                     .Value {
                         margin-top: @small-gutter;
+                        font-weight: bold;
+                        cursor: help;
                     }
                 }
             }
@@ -68,8 +80,8 @@
             padding: 0.5em;
 
             border-width: 1px;
-            border-radius: 4px;
             border-style: solid;
+            border-radius: @roundness;
             border-color: @border-color;
 
             color: @border-color;
