--- a/source/views/ExtensionInsight.view.less
+++ b/source/views/ExtensionInsight.view.less
@@ -38,8 +38,8 @@
                 justify-content: center;
 
                 .Event {
-                    // flex: 1;
-                    width: 5em;
+                    flex: 1;
+                    // width: 5em;
 
                     &:not(:first-child) {
                         margin-left: 1em;
