--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -22,9 +22,15 @@
 }
 
 #mount {
+    left: 0em;
+    right: 0em;
     width: 100%;
     height: 100%;
+    margin: auto;
     position: fixed;
+    max-width: @max-point;
+
+    overflow-y: scroll;
 
     color: @black;
     text-align: center;
