--- a/source/views/Styles.view.less
+++ b/source/views/Styles.view.less
@@ -19,6 +19,9 @@
 @roundness: 0.25em;
 @golden-ratio: 1.618;
 
+@break-point: 800px;
+@max-point: 1200px;
+
 @gutter: 1em;
 @small-gutter: 1em / @golden-ratio;
 @big-gutter: 1em * @golden-ratio;
