--- a/source/views/Styles.view.less
+++ b/source/views/Styles.view.less
@@ -8,9 +8,12 @@
 @yellow: #DEB74A;
 @red: #A52F22;
 
+@purple: #392e5c;
 @horizontal-gradient: linear-gradient(90deg,#3d2fae,#b769d1);
 @vertical-gradient: linear-gradient(#3d2fae,#b769d1);
 @border-color: #392e5c;
+
+@faded-gray: rgba(0, 0, 0, 0.1);
 
 /////////////////
 // Dimensions //
@@ -19,9 +22,14 @@
 @roundness: 0.25em;
 @golden-ratio: 1.618;
 
+@border-width: 8px;
+
 @break-point: 800px;
 @max-point: 1200px;
 
 @gutter: 1em;
 @small-gutter: 1em / @golden-ratio;
 @big-gutter: 1em * @golden-ratio;
+
+@big-text: 1.25em;
+@biggest-text: 1.5em;
