Started mocking out the graph visualization.

--- a/source/views/ExtensionInsight.view.less
+++ b/source/views/ExtensionInsight.view.less
@@ -67,6 +67,10 @@
             .Value {
                 font-size: 2em;
             }
+            .Label {
+                font-size: @small-text;
+                text-transform: lowercase;
+            }
         }
     }
 
