--- a/source/views/Styles.view.less
+++ b/source/views/Styles.view.less
@@ -31,5 +31,6 @@
 @small-gutter: 1em / @golden-ratio;
 @big-gutter: 1em * @golden-ratio;
 
-@big-text: 1.25em;
-@biggest-text: 1.5em;
+@small-text: 0.8em;
+@big-text: 1.5em;
+@biggest-text: 3em;
