Moved all the bar charts onto the same line.

--- a/source/views/ExtensionInsight.view.less
+++ b/source/views/ExtensionInsight.view.less
@@ -80,7 +80,7 @@
     }
 
     section.Visualizations {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         @media(max-width: @break-point) {
             grid-template-columns: 1fr;
         }
@@ -124,10 +124,7 @@
 
                     .Label {
                         word-break: break-word;
-
-                        @media(max-width: @break-point) {
-                            font-size: 0.7em;
-                        }
+                        font-size: 0.7em;
                     }
                 }
             }
