--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -22,14 +22,72 @@
 }
 
 #mount {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow-y: auto;
+
     color: @black;
     text-align: center;
     font-family: open-sans;
     background-color: @white;
 
-    &.drag {
+    .DragZone {
+        opacity: 0;
+        transition-duration: 0.25s;
+        transition-property: opacity;
+
+        pointer-events: none;
+
+        top: 0px;
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+        margin: auto;
+        z-index: 999999;
+        overflow: hidden;
+        position: absolute;
+        max-width: @max-point;
+
         border-width: 8px;
         border-style: dashed;
-        border-color: @border-color;
+        border-color: @purple;
+
+        .Prompt {
+            position: absolute;
+            left: @gutter * -3;
+            right: @gutter * -3;
+            padding: @small-gutter @gutter * 4;
+            font-size: 3em;
+
+            color: @white;
+            background-color: fadeout(@black, 25%);
+
+            transform-origin: 50% 50%;
+            transform: translateY(40vh) rotate(12.5deg);
+
+            @media(max-width: @break-point) {
+                font-size: 2em;
+            }
+        }
+
+        &.isExample {
+            animation-fill-mode: forwards;
+            animation-name: fade-in;
+            animation-duration: 1s;
+            animation-delay: 1s;
+        }
     }
+
+    &.drag {
+        .DragZone {
+            opacity: 1;
+            transition-duration: 0.5s;
+        }
+    }
+}
+
+@keyframes fade-in {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
