--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -71,20 +71,20 @@
             }
         }
 
-        &.isExample {
-            animation-fill-mode: forwards;
-            animation-name: fade-in;
-            animation-duration: 1s;
-            animation-delay: 1s;
-        }
+        // &.isExample {
+        //     animation-fill-mode: forwards;
+        //     animation-name: fade-in;
+        //     animation-duration: 1s;
+        //     animation-delay: 1s;
+        // }
     }
 
-    &.drag {
-        .DragZone {
-            opacity: 1;
-            transition-duration: 0.5s;
-        }
-    }
+    // &.drag {
+    //     .DragZone {
+    //         opacity: 1;
+    //         transition-duration: 0.5s;
+    //     }
+    // }
 }
 
 @keyframes fade-in {
